<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:id="@+id/homeGroup">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
    </group>

    <group android:id="@+id/fnction">
        <item
            android:id="@+id/navigation_menuMyAds"
            android:icon="@drawable/ic_ads_add_black_24dp"
            android:title="@string/myAds" />
        <item
            android:id="@+id/navigation_Watching"
            android:icon="@drawable/ic_personal_video_black_24dp"
            android:title="@string/watching" />
        <item
            android:id="@+id/navigation_Trending"
            android:icon="@drawable/ic_trending_black_24dp"
            android:title="@string/trending" />
        <item
            android:id="@+id/navigation_AllCategory"
            android:icon="@drawable/ic_category_black_24dp"
            android:title="@string/category" />

    </group>
    <group android:id="@+id/settingGroup">
        <item
            android:id="@+id/navigation_Setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting" />
        <item
            android:id="@+id/navigation_Help"
            android:icon="@drawable/ic_feedback_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/signOut"
            android:icon="@drawable/ic_feedback_24dp"
            android:title="Sign Out"/>



    </group>
</menu>