<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navChild"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_main"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="8dp">


            <EditText
                android:id="@+id/viewSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:hint="Search For Anything"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="16dp" />


        </android.support.v7.widget.CardView>

        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView"
            android:background="@color/colorAccent"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@color/tablebcolor">

            <android.support.design.widget.TabItem
                android:id="@+id/tabHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_home" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabRecent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_Recentl" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_Category" />

        </android.support.design.widget.TabLayout>


        <!--<ScrollView-->
        <!--android:id="@+id/example"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/toolbar_main">-->

        <!--<LinearLayout-->
        <!--android:id="@+id/cardLin"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/toolbar_main"-->
        <!--android:orientation="vertical">-->


        <android.support.v4.view.ViewPager
            android:id="@+id/viewPagerMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tablayout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </RelativeLayout>
    <!--</LinearLayout>-->
    <!--</ScrollView>-->

    <FrameLayout
        android:id="@+id/fr_addMore"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.design.widget.CoordinatorLayout>