<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".DetailItemView.ItemDetailView">


    <android.support.v7.widget.Toolbar
        android:id="@+id/fr_AddDetails_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fr_AddDetails_toolbar"

        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v4.view.ViewPager
                    android:id="@+id/itemImageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/white"
                    android:transitionName="@string/logoTransitionName">

                </android.support.v4.view.ViewPager>


                <android.support.design.widget.TabLayout
                    android:id="@+id/tabDetailsDots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:tabBackground="@drawable/tab_ind_pag_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/abtThisItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tabDetailsDots"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/about_this_item"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />


            <android.support.v7.widget.CardView
                android:id="@+id/viewCardDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/abtThisItem"
                android:layout_marginTop="20dp"
                android:elevation="8dp">


                <TableLayout
                    android:id="@+id/detailLayot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/brandName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="Brand Name"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textColor="@color/black"
                            android:textSize="15dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/model"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="Modle Number"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/modelNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="text"
                            android:textColor="@color/black"
                            android:textSize="15dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="Price"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/itemPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textColor="@color/black"
                            android:textSize="15dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/priceStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="Price Status"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/itemPriceStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textColor="@color/black"
                            android:textSize="15dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/conditon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="Item Condition"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/itemConditon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textColor="@color/black"
                            android:textSize="15dp" />
                    </TableRow>


                </TableLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/abtseller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewCardDetails"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/about_seller"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/viewSellerDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/abtseller"
                android:layout_marginTop="4dp"
                android:elevation="8dp">


                <TableLayout
                    android:id="@+id/detailSellerLayot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="Seller Name"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/sellerName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="text"
                            android:textColor="@color/black"
                            android:textSize="15dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="Address"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/sellerAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textColor="@color/black"
                            android:textSize="15dp" />
                    </TableRow>
                </TableLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>